--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<embed src="resume.pdf" width="500" height="375" type="application/pdf">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<style>
+    body, iframe{
+        min-height:100vh;width:100%;
+        padding:0;
+        margin:0;
+        overscroll-behavior: none;
+    }
+</style>
+<body>
+    <iframe src="resume.pdf" style="min-height:100vh;width:100%" frameborder="0"></iframe>
+</body>
+</html>
+
