--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         min-height:100vh;width:100%;
         padding:0;
         margin:0;
-        overscroll-behavior: none;
+        overflow: hidden;
     }
 </style>
 <body>
